Upgrade to JDK19 and Gradle 7.6